--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60b471">  <td>22/07/05 08:46:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestLogin.setup()[pri:0, instance:com.makemytrip.Web.TestLogin@932bc4a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@936653983</td>   <td></td> </tr>
-<tr bgcolor="60b471">  <td>22/07/05 08:47:28</td>   <td>30635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.verify_login()[pri:0, instance:com.makemytrip.Web.TestLogin@932bc4a]">verify_login</td> 
-  <td>main@936653983</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@2e222612]">testMethod</td> 
+  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@2e222612]">testMethod</td> 
+  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@2e222612]">testMethod</td> 
+  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@2e222612]">testMethod</td> 
+  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@2e222612]">testMethod</td> 
+  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 19:01:24</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@2e222612]">testMethod1</td> 
+  <td>main@556281560</td>   <td></td> </tr>
 </table>
