--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test1()[pri:0, instance:practice.Test001@2e222612]">Test1</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test1()[pri:0, instance:practice.Test001@2e222612]">Test1</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test1()[pri:0, instance:practice.Test001@2e222612]">Test1</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test1()[pri:0, instance:practice.Test001@2e222612]">Test1</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test1()[pri:0, instance:practice.Test001@2e222612]">Test1</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test2()[pri:0, instance:practice.Test001@2e222612]">Test2</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test2()[pri:0, instance:practice.Test001@2e222612]">Test2</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test2()[pri:0, instance:practice.Test001@2e222612]">Test2</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test2()[pri:0, instance:practice.Test001@2e222612]">Test2</td> 
-  <td>main@556281560</td>   <td></td> </tr>
-<tr bgcolor="d76f91">  <td>22/06/06 02:07:20</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test001.Test2()[pri:0, instance:practice.Test001@2e222612]">Test2</td> 
-  <td>main@556281560</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@3246fb96]">testMethod</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@3246fb96]">testMethod</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@3246fb96]">testMethod</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@3246fb96]">testMethod</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod()[pri:0, instance:practice.P2@3246fb96]">testMethod</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@3246fb96]">testMethod1</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@3246fb96]">testMethod1</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@3246fb96]">testMethod1</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@3246fb96]">testMethod1</td> 
+  <td>main@739973450</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>22/09/09 21:13:57</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="P2.testMethod1()[pri:0, instance:practice.P2@3246fb96]">testMethod1</td> 
+  <td>main@739973450</td>   <td></td> </tr>
 </table>
